# Outcome-Based-Education

./: .gitignore  GOOGLE_OAUTH_SETUP.md  README.md  USER_MANAGEMENT.md
obebackend/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  schema.sql
obebackend/docs/: SEED_OUTCOMES_GUIDE.md
obebackend/scripts/: reset_admin_password.py  seed_data.py  seed_outcomes.py
obebackend/src/obebackend/: __init__.py  config.py  main.py
obebackend/src/obebackend/controllers/: __init__.py  analytics_controller.py  assessment_controller.py  auth_controller.py  course_controller.py  mapping_controller.py  outcome_controller.py  result_controller.py  teacher_course_controller.py  user_controller.py
obebackend/src/obebackend/database/: __init__.py  connection.py
obebackend/src/obebackend/database/queries/: __init__.py  assessment_queries.py  course_queries.py  mapping_queries.py  (+9 more)
obebackend/src/obebackend/middleware/: __init__.py  auth_middleware.py  error_handler.py  rbac_middleware.py
obebackend/src/obebackend/routes/: __init__.py  analytics.py  assessments.py  auth.py  courses.py  mappings.py  outcomes.py  results.py  teacher_courses.py  users.py
obebackend/src/obebackend/schemas/: __init__.py  analytics_schemas.py  assessment_schemas.py  auth_schemas.py  common_schemas.py  course_schemas.py  mapping_schemas.py  outcome_schemas.py  result_schemas.py  teacher_course_schemas.py  user_schemas.py
obebackend/src/obebackend/tests/: __init__.py
obebackend/src/obebackend/utils/: __init__.py  email.py  oauth.py  otp.py  security.py  validators.py
(+92 files in other folders)
